--- a/index.html
+++ b/index.html
@@ -8,28 +8,26 @@
 <body onload="init();">
 <table class="calculadora">
 <tr>
-  <td colspan="4"><span id="resultado"></span></td>
+  <td colspan="4"><span id="Resultado"></span></td>
 </tr>
 <tr>
-  <td><button id="siete">7</button></td><td><button id="ocho">8</button></td><td><button id="nueve">9</button></td><td><button id="division">/</button></td>
+  <td><button id="Siete">7</button></td><td><button id="ocho">8</button></td><td><button id="nueve">9</button></td><td><button id="division">/</button></td>
 </tr>
 <tr>
-  <td><button id="cuatro">4</button></td><td><button id="cinco">5</button></td><td><button id="seis">6</button></td><td><button id="multiplicacion">*</button></td>
+  <td><button id="Cuatro">4</button></td><td><button id="cinco">5</button></td><td><button id="seis">6</button></td><td><button id="multiplicacion">*</button></td>
 </tr>
 <tr>
-  <td><button id="uno">1</button></td><td><button id="dos">2</button></td><td><button id="tres">3</button></td><td><button id="resta">-</button></td>
+  <td><button id="Uno">1</button></td><td><button id="dos">2</button></td><td><button id="tres">3</button></td><td><button id="resta">-</button></td>
 </tr>
 <tr>
   <td><button id="igual">=</button></td><td><button id="reset">C</button></td><td><button id="cero">0</button></td><td><button id="suma">+</button></td>
 </tr>
 <tr>
-  <td colspan="4"><span id="creditos">Calculadora en JS by: HibranLe</span></td>
+  <td colspan="4"><span id="Creditos">Calculadora en JS by: HibranLe</span></td>
 </tr>
 </table>
 <script src="funcion.js"></script>
 </body>
 </html>
 
-<--
-https://denisseestrada.com/calculadora-con-javascript/
--->
+<!--https://denisseestrada.com/calculadora-con-javascript/-->
